[package]
name = "trytocrack-roxasytb-repl-co"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# enable max opt level
[profile.release]
opt-level = 3
codegen-units = 1
debug = false
lto = true
panic = "abort"
incremental = false
overflow-checks = false
rpath = false
debug-assertions = false

[dependencies]
rayon = "1.8.0"
